--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ a:active {
 <body>
 
 <body style="background-color:#FFFFFF">
-<img src="/Users/mattmiller/Documents/Test_Site/Links/home_page_index/Homepage-FG-Logo.png" alt="homepage_0" class="center">
+<img src="/mmmattmiller.github.io/future-genesis-site/Links/home_page_index/Homepage-FG-Logo.png" alt="homepage_0" class="center">
 <br>
 <img src="/Users/mattmiller/Documents/Test_Site/Links/home_page_index/Homepage-Image.png" alt="homepage_1" class="center">
 <br>
