--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ a:active {
 <body style="background-color:#FFFFFF">
 <img src="./Links/home_page_index/Homepage-FG-Logo.png" alt="homepage_0" class="center">
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/home_page_index/Homepage-Image.png" alt="homepage_1" class="center">
+<img src="./Links/home_page_index/Homepage-Image.png" alt="homepage_1" class="center">
 <br>
 <p style="text-align: center;">
 <a href="/Users/mattmiller/Documents/Test_Site/collapse-list-html/collapse-list.html" class="center">- Enter Site -</a></p>
