--- a/collapse-list-html/collapse-list.html
+++ b/collapse-list-html/collapse-list.html
@@ -52,7 +52,7 @@ img {
 	<li>
         Motion Assets
         <ul>
-          	<li><a href="/future-genesis-site/page_12.html">1992</a></li>
+          	<li><a href="/page_12.html">1992</a></li>
 		<li><a href="/Users/mattmiller/Documents/Test_Site/page_13.html">2023</a></li>
             </ul>
           </li>
