--- a/page_1.html
+++ b/page_1.html
@@ -29,7 +29,7 @@ a:active {
 
 <body style="background-color:#FFFFFF">
 <div style="max-width:500px">
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Origin_Story/oak_max_fearlight_3.png" style="max-width:100%;" /></a>
+<img src="./Links/Origin_Story/oak_max_fearlight_3.png" style="max-width:100%;" /></a>
 <br>
 <img src="/Users/mattmiller/Documents/Test_Site/Links/Origin_Story/oak_max_fearlight_4.png" style="max-width:100%;" /></a>
 <br>
