--- a/collapse-list.html
+++ b/collapse-list.html
@@ -6,7 +6,7 @@ Oakley Archive
 </title>
   
 <!-- (A) LOAD CSS & JS -->
-    <link rel="stylesheet" href="/Users/mattmiller/Documents/Test_Site/collapse-list-html/collapse-list.css">
+    <link rel="stylesheet" href="collapse-list.css">
     <script src="collapse-list.js"></script>
 
 <style>
@@ -42,7 +42,7 @@ img {
 <body style="background-color:#FFFFFF">
 <table>
 	<tr>
-	<td><img src="/Users/mattmiller/Documents/Test_Site/Links/home_page_index/index_page.jpg" /></a></td>
+	<td><img src="./Links/home_page_index/index_page.jpg" /></a></td>
 	</tr>	
 </table>
 
