--- a/collapse-list.html
+++ b/collapse-list.html
@@ -6,8 +6,8 @@ Oakley Archive
 </title>
   
 <!-- (A) LOAD CSS & JS -->
-    <link rel="stylesheet" href="collapse-list.css">
-    <script src="collapse-list.js"></script>
+    <link rel="stylesheet" href="./collapse-list.css">
+    <script src="./collapse-list.js"></script>
 
 <style>
 a:link {
@@ -42,7 +42,7 @@ img {
 <body style="background-color:#FFFFFF">
 <table>
 	<tr>
-	<td><img src="./Links/home_page_index/index_page.jpg" /></a></td>
+	<td><img src="/Links/home_page_index/index_page.jpg" /></a></td>
 	</tr>	
 </table>
 
