--- a/collapse-list.html
+++ b/collapse-list.html
@@ -40,12 +40,7 @@ img {
 </head>
   <body>
 <body style="background-color:#FFFFFF">
-<table>
-	<tr>
-	<td><img src="/Links/home_page_index/index_page.jpg" /></a></td>
-	</tr>	
-</table>
-
+	<img src="/Links/home_page_index/index_page.jpg" />
 
     <!-- (B) NESTED LIST -->
     <ul class="collapse">
