--- a/collapse-list.html
+++ b/collapse-list.html
@@ -40,7 +40,7 @@ img {
 </head>
   <body>
 <body style="background-color:#FFFFFF">
-	<img src="/Links/home_page_index/index_page.jpg" />
+	<img src="./Links/home_page_index/index_page.jpg" />
 
     <!-- (B) NESTED LIST -->
     <ul class="collapse">
