--- a/collapse-list.html
+++ b/collapse-list.html
@@ -47,8 +47,8 @@ img {
 	<li>
         Motion Assets
         <ul>
-          	<li><a href="/Users/mattmiller/Documents/Test_Site/page_12.html">1992</a></li>
-		<li><a href="/Users/mattmiller/Documents/Test_Site/page_13.html">2023</a></li>
+          	<li><a href="page_12.html">1992</a></li>
+		<li><a href="page_13.html">2023</a></li>
             </ul>
           </li>
         </ul>
