--- a/collapse-list.html
+++ b/collapse-list.html
@@ -58,7 +58,7 @@ img {
       <li>
         Origin Story
         <ul>
-          	<li><a href="/Users/mattmiller/Documents/Test_Site/page_1.html">Index</a></li>
+          	<li><a href="./page_1.html">Index</a></li>
             </ul>
           </li>
         </ul>
@@ -69,7 +69,7 @@ img {
       <li>
         Creed
         <ul>
-          <li><a href="/Users/mattmiller/Documents/Test_Site/page_2.html">Index</a></li>
+          <li><a href="./page_2.html">Index</a></li>
 	
             </ul>
           </li>
@@ -81,8 +81,8 @@ img {
       <li>
         Leaders
         <ul>
-          <li><a href="/Users/mattmiller/Documents/Test_Site/page_3.html">Max</a></li>
-	  <li><a href="/Users/mattmiller/Documents/Test_Site/page_4.html">Maxine</a></li>
+          <li><a href="./page_3.html">Max</a></li>
+	  <li><a href="./page_4.html">Maxine</a></li>
             </ul>
           </li>
         </ul>
@@ -93,7 +93,7 @@ img {
       <li>
         Icons
         <ul>
-          <li><a href="/Users/mattmiller/Documents/Test_Site/page_5.html">Index</a></li>
+          <li><a href="./page_5.html">Index</a></li>
             </ul>
           </li>
         </ul>
@@ -105,7 +105,7 @@ img {
       <li>
         Temples
         <ul>
-          <li><a href="/Users/mattmiller/Documents/Test_Site/page_6.html">Index</a></li>
+          <li><a href="./page_6.html">Index</a></li>
             </ul>
           </li>
         </ul>
@@ -116,7 +116,7 @@ img {
       <li>
         Rituals
         <ul>
-          <li><a href="/Users/mattmiller/Documents/Test_Site/page_7.html">Index</a></li>
+          <li><a href="./page_7.html">Index</a></li>
             </ul>
           </li>
         </ul>
@@ -127,7 +127,7 @@ img {
       <li>
         Lexicon
         <ul>
-          <li><a href="/Users/mattmiller/Documents/Test_Site/page_8.html">Index</a></li>
+          <li><a href="./page_8.html">Index</a></li>
             </ul>
           </li>
         </ul>
@@ -138,7 +138,7 @@ img {
       <li>
         Non Believers
         <ul>
-          <li><a href="/Users/mattmiller/Documents/Test_Site/page_9.html">Index</a></li>
+          <li><a href="./page_9.html">Index</a></li>
             </ul>
           </li>
         </ul>
@@ -149,7 +149,7 @@ img {
       <li>
         The Road Ahead
         <ul>
-          <li><a href="/Users/mattmiller/Documents/Test_Site/page_10.html">Index</a></li>
+          <li><a href="./page_10.html">Index</a></li>
             </ul>
           </li>
         </ul>
@@ -160,10 +160,10 @@ img {
       <li>
         Appendix
         <ul>
-          <li><a href="/Users/mattmiller/Documents/Test_Site/page_11.html">Product</a></li>
-	  <li><a href="/Users/mattmiller/Documents/Test_Site/page_14.html">Technology</a></li>
-	  <li><a href="/Users/mattmiller/Documents/Test_Site/page_15.html">The Bunker</a></li>
-	  <li><a href="/Users/mattmiller/Documents/Test_Site/page_16.html">Photography & Advertising</a></li>
+          <li><a href="./page_11.html">Product</a></li>
+	  <li><a href="./page_14.html">Technology</a></li>
+	  <li><a href="./page_15.html">The Bunker</a></li>
+	  <li><a href="./page_16.html">Photography & Advertising</a></li>
 
             </ul>
           </li>
