--- a/collapse-list.html
+++ b/collapse-list.html
@@ -6,8 +6,8 @@ Oakley Archive
 </title>
   
 <!-- (A) LOAD CSS & JS -->
-    <link rel="stylesheet" href="/Users/mattmiller/Documents/Test_Site/collapse-list-html/collapse-list.css">
-    <script src="collapse-list.js"></script>
+    <link rel="stylesheet" href="./collapse-list.css">
+    <script src="./collapse-list.js"></script>
 
 <style>
 a:link {
@@ -40,11 +40,8 @@ img {
 </head>
   <body>
 <body style="background-color:#FFFFFF">
-<table>
-	<tr>
-	<td><img src="/Users/mattmiller/Documents/Test_Site/Links/home_page_index/index_page.jpg" /></a></td>
-	</tr>	
-</table>
+	<img src="./Links/home_page_index/index_page.jpg" />
+	
 
 
     <!-- (B) NESTED LIST -->
