--- a/collapse-list.html
+++ b/collapse-list.html
@@ -60,7 +60,7 @@ img {
       <li>
         Origin Story
         <ul>
-          	<li><a href="/Users/mattmiller/Documents/Test_Site/page_1.html">Index</a></li>
+          	<li><a href="./page_1.html">Index</a></li>
             </ul>
           </li>
         </ul>
