--- a/collapse-list.html
+++ b/collapse-list.html
@@ -71,7 +71,7 @@ img {
       <li>
         Creed
         <ul>
-          <li><a href="/Users/mattmiller/Documents/Test_Site/page_2.html">Index</a></li>
+          <li><a href="./page_2.html">Index</a></li>
 	
             </ul>
           </li>
@@ -83,8 +83,8 @@ img {
       <li>
         Leaders
         <ul>
-          <li><a href="/Users/mattmiller/Documents/Test_Site/page_3.html">Max</a></li>
-	  <li><a href="/Users/mattmiller/Documents/Test_Site/page_4.html">Maxine</a></li>
+          <li><a href="./page_3.html">Max</a></li>
+	  <li><a href="./page_4.html">Maxine</a></li>
             </ul>
           </li>
         </ul>
