--- a/collapse-list.html
+++ b/collapse-list.html
@@ -95,7 +95,7 @@ img {
       <li>
         Icons
         <ul>
-          <li><a href="/Users/mattmiller/Documents/Test_Site/page_5.html">Index</a></li>
+          <li><a href="./page_5.html">Index</a></li>
             </ul>
           </li>
         </ul>
@@ -107,7 +107,7 @@ img {
       <li>
         Temples
         <ul>
-          <li><a href="/Users/mattmiller/Documents/Test_Site/page_6.html">Index</a></li>
+          <li><a href="./page_6.html">Index</a></li>
             </ul>
           </li>
         </ul>
