--- a/collapse-list.html
+++ b/collapse-list.html
@@ -118,7 +118,7 @@ img {
       <li>
         Rituals
         <ul>
-          <li><a href="/Users/mattmiller/Documents/Test_Site/page_7.html">Index</a></li>
+          <li><a href="./page_7.html">Index</a></li>
             </ul>
           </li>
         </ul>
@@ -129,7 +129,7 @@ img {
       <li>
         Lexicon
         <ul>
-          <li><a href="/Users/mattmiller/Documents/Test_Site/page_8.html">Index</a></li>
+          <li><a href="./page_8.html">Index</a></li>
             </ul>
           </li>
         </ul>
@@ -140,7 +140,7 @@ img {
       <li>
         Non Believers
         <ul>
-          <li><a href="/Users/mattmiller/Documents/Test_Site/page_9.html">Index</a></li>
+          <li><a href="./page_9.html">Index</a></li>
             </ul>
           </li>
         </ul>
