--- a/collapse-list.html
+++ b/collapse-list.html
@@ -151,7 +151,7 @@ img {
       <li>
         The Road Ahead
         <ul>
-          <li><a href="/Users/mattmiller/Documents/Test_Site/page_10.html">Index</a></li>
+          <li><a href="./page_10.html">Index</a></li>
             </ul>
           </li>
         </ul>
@@ -162,10 +162,10 @@ img {
       <li>
         Appendix
         <ul>
-          <li><a href="/Users/mattmiller/Documents/Test_Site/page_11.html">Product</a></li>
-	  <li><a href="/Users/mattmiller/Documents/Test_Site/page_14.html">Technology</a></li>
-	  <li><a href="/Users/mattmiller/Documents/Test_Site/page_15.html">The Bunker</a></li>
-	  <li><a href="/Users/mattmiller/Documents/Test_Site/page_16.html">Photography & Advertising</a></li>
+          <li><a href="./page_11.html">Product</a></li>
+	  <li><a href="./page_14.html">Technology</a></li>
+	  <li><a href="./page_15.html">The Bunker</a></li>
+	  <li><a href="./page_16.html">Photography & Advertising</a></li>
 
             </ul>
           </li>
