--- a/page_1.html
+++ b/page_1.html
@@ -31,15 +31,15 @@ a:active {
 <div style="max-width:500px">
 <img src="./Links/Origin_Story/oak_max_fearlight_3.png" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Origin_Story/oak_max_fearlight_4.png" style="max-width:100%;" /></a>
+<img src="./Links/Origin_Story/oak_max_fearlight_4.png" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Origin_Story/oak_max_fearlight_5.png" style="max-width:100%;" /></a>
+<img src="./Links/Origin_Story/oak_max_fearlight_5.png" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Origin_Story/max_fear_light_1.png" style="max-width:100%;" /></a>
+<img src="./Links/Origin_Story/max_fear_light_1.png" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Origin_Story/max_fear_light_2.png" style="max-width:100%;" /></a>
+<img src="./Links/Origin_Story/max_fear_light_2.png" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Origin_Story/original_racing_jacket.jpg" style="max-width:100%;" /></a>
+<img src="./Links/Origin_Story/original_racing_jacket.jpg" style="max-width:100%;" /></a>
 <br>
 <img src="/Users/mattmiller/Documents/Test_Site/Links/Origin_Story/oak_architecture_5.jpg" style="max-width:100%;" /></a>
 <br>
