--- a/page_1.html
+++ b/page_1.html
@@ -41,17 +41,17 @@ a:active {
 <br>
 <img src="./Links/Origin_Story/original_racing_jacket.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Origin_Story/oak_architecture_5.jpg" style="max-width:100%;" /></a>
+<img src="./Links/Origin_Story/oak_architecture_5.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Origin_Story/oak_architecture_1.jpg" style="max-width:100%" title=" /></a>
+<img src="./Links/Origin_Story/oak_architecture_1.jpg" style="max-width:100%" title=" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Origin_Story/oak_architecture_2.jpg" style="max-width:100%;" /></a>
+<img src="./Links/Origin_Story/oak_architecture_2.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Origin_Story/oak_architecture_3.jpg" style="max-width:100%" /></a>
+<img src="./Links/Origin_Story/oak_architecture_3.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Origin_Story/oak_architecture_4.jpg" style="max-width:100%;" /></a>
+<img src="./Links/Origin_Story/oak_architecture_4.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Origin_Story/machinery_oak_1.png" style="max-width:100%" /></a>
+<img src="./Links/Origin_Story/machinery_oak_1.png" style="max-width:100%" /></a>
 <br>
 <img src="/Users/mattmiller/Documents/Test_Site/Links/Origin_Story/machinery_oak_2.jpg" style="max-width:100%" /></a>
 <br>
