--- a/page_1.html
+++ b/page_1.html
@@ -53,17 +53,17 @@ a:active {
 <br>
 <img src="./Links/Origin_Story/machinery_oak_1.png" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Origin_Story/machinery_oak_2.jpg" style="max-width:100%" /></a>
+<img src="./Links/Origin_Story/machinery_oak_2.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Origin_Story/machinery_oak_3.jpg" style="max-width:100%" /></a>
+<img src="./Links/Origin_Story/machinery_oak_3.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Origin_Story/oakley_spectrum_retail.jpg" style="max-width:100%" /></a>
+<img src="./Links/Origin_Story/oakley_spectrum_retail.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Origin_Story/blowtorch_shoe_origins.jpg" style="max-width:100%" /></a>
+<img src="./Links/Origin_Story/blowtorch_shoe_origins.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Origin_Story/yellowshoe_2_origins.jpg" style="max-width:100%" /></a>
+<img src="./Links/Origin_Story/yellowshoe_2_origins.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Origin_Story/yellowshoe_origins.jpg" style="max-width:100%" /></a>
+<img src="./Links/Origin_Story/yellowshoe_origins.jpg" style="max-width:100%" /></a>
 <br>
 <img src="/Users/mattmiller/Documents/Test_Site/Links/Origin_Story/yellow_ad_origins.jpg" style="max-width:100%" /></a>
 <br>
