--- a/page_1.html
+++ b/page_1.html
@@ -65,21 +65,21 @@ a:active {
 <br>
 <img src="./Links/Origin_Story/yellowshoe_origins.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Origin_Story/yellow_ad_origins.jpg" style="max-width:100%" /></a>
+<img src="./Links/Origin_Story/yellow_ad_origins.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Origin_Story/yellow_sunglasses_origins_3.png" style="max-width:100%" /></a>
+<img src="./Links/Origin_Story/yellow_sunglasses_origins_3.png" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Origin_Story/technology_oak_1.jpg" style="max-width:100%" /></a>
+<img src="./Links/Origin_Story/technology_oak_1.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Origin_Story/logo_oak_1.jpg" style="max-width:100%" /></a>
+<img src="./Links/Origin_Story/logo_oak_1.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Origin_Story/rodman_oak_advertisting_1.jpg" style="max-width:100%" /></a>
+<img src="./Links/Origin_Story/rodman_oak_advertisting_1.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Origin_Story/jordan_oak_advertisting_2.jpg" style="max-width:100%" /></a>
+<img src="./Links/Origin_Story/jordan_oak_advertisting_2.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Origin_Story/green_man_oak_advertising_5.jpg" style="max-width:100%" /></a>
+<img src="./Links/Origin_Story/green_man_oak_advertising_5.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Origin_Story/mars_oak_advertising_4.jpg" style="max-width:100%" /></a>
+<img src="./Links/Origin_Story/mars_oak_advertising_4.jpg" style="max-width:100%" /></a>
 <br>
 <p style = "font-family:courier,serif;font-size:16px;font-style:regular;">
 <a href="/Users/mattmiller/Documents/Test_Site/collapse-list-html/collapse-list.html">Back</a>
