--- a/page_2.html
+++ b/page_2.html
@@ -31,19 +31,19 @@ a:active {
 <div style="max-width:500px">
 <img src="" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Creed/oak_creed_1.jpg" style="max-width:100%;" /></a>
+<img src="./Links/Creed/oak_creed_1.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Creed/oak_creed_2.png" style="max-width:100%;" /></a>
+<img src="./Links/Creed/oak_creed_2.png" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Creed/oak_creed_3.jpg" style="max-width:100%;" /></a>
+<img src="./Links/Creed/oak_creed_3.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Creed/oak_creed_4.jpg" style="max-width:100%;" /></a>
+<img src="./Links/Creed/oak_creed_4.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Creed/oak_creed_5.jpg" style="max-width:100%;" /></a>
+<img src="./Links/Creed/oak_creed_5.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Creed/oak_creed_6.jpg" style="max-width:100%;" /></a>
+<img src="./Links/Creed/oak_creed_6.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Creed/oak_creed_7.jpg" style="max-width:100%;" /></a>
+<img src="./Links/Creed/oak_creed_7.jpg" style="max-width:100%;" /></a>
 <br>
 <img src="/Users/mattmiller/Documents/Test_Site/Links/Creed/oak_creed_8.jpg" style="max-width:100%;" /></a>
 <br>
