--- a/page_2.html
+++ b/page_2.html
@@ -41,9 +41,9 @@ a:active {
 <br>
 <img src="./Links/Creed/oak_creed_5.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="./Links/Creed/oak_creed_6.jpg" style="max-width:100%;" /></a>
+<img src="/Users/mattmiller/Documents/Test_Site/Links/Creed/oak_creed_6.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="./Links/Creed/oak_creed_7.jpg" style="max-width:100%;" /></a>
+<img src="/Users/mattmiller/Documents/Test_Site/Links/Creed/oak_creed_7.jpg" style="max-width:100%;" /></a>
 <br>
 <img src="/Users/mattmiller/Documents/Test_Site/Links/Creed/oak_creed_8.jpg" style="max-width:100%;" /></a>
 <br>
