--- a/page_2.html
+++ b/page_2.html
@@ -49,15 +49,15 @@ a:active {
 <br>
 <img src="./Links/Creed/oak_creed_9.png" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Creed/oak_creed_10.jpg" style="max-width:100%;" /></a>
+<img src="./Links/Creed/oak_creed_10.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Creed/creeds_oak_14.jpg" style="max-width:100%;" /></a>
+<img src="./Links/Creed/creeds_oak_14.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Creed/oak_creed_11.jpg" style="max-width:100%;" /></a>
+<img src="./Links/Creed/oak_creed_11.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Creed/oak_creed_12.jpg" style="max-width:100%;" /></a>
+<img src="./Links/Creed/oak_creed_12.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Creed/oak_creed_13.png" style="max-width:100%;" /></a>
+<img src="./Links/Creed/oak_creed_13.png" style="max-width:100%;" /></a>
 <br>
 <p style = "font-family:courier,serif;font-size:16px;font-style:regular;">
 
