--- a/page_3.html
+++ b/page_3.html
@@ -29,15 +29,15 @@ a:active {
 
 <body style="background-color:#FFFFFF">
 <div style="max-width:500px">
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Leaders/oak_maxfearlight_1.jpg" style="max-width:100%;" /></a>
+<img src="./Links/Leaders/oak_maxfearlight_1.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Leaders/oak_maxfearlight_2.jpg" style="max-width:100%;" /></a>
+<img src="./Links/Leaders/oak_maxfearlight_2.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Leaders/oak_maxfearlight_3.jpg" style="max-width:100%;" /></a>
+<img src="./Links/Leaders/oak_maxfearlight_3.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Leaders/oak_maxfearlight_4.jpg" style="max-width:100%;" /></a>
+<img src="./Links/Leaders/oak_maxfearlight_4.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Leaders/oak_maxfearlight_5.jpg" style="max-width:100%;" /></a>
+<img src="./Links/Leaders/oak_maxfearlight_5.jpg" style="max-width:100%;" /></a>
 <br>
 <p style = "font-family:courier,serif;font-size:16px;font-style:regular;">
 <a href="/Users/mattmiller/Documents/Test_Site/collapse-list-html/collapse-list.html">Back</a>
