--- a/page_3.html
+++ b/page_3.html
@@ -37,7 +37,7 @@ a:active {
 <br>
 <img src="./Links/Leaders/oak_maxfearlight_4.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="Users/mattmiller/Documents/Test_Site/Links/Leaders/oak_maxfearlight_5.jpg" style="max-width:100%;" /></a>
+<img src="./Links/Leaders/oak_maxfearlight_5.jpg" style="max-width:100%;" /></a>
 <br>
 <p style = "font-family:courier,serif;font-size:16px;font-style:regular;">
 <a href="/Users/mattmiller/Documents/Test_Site/collapse-list-html/collapse-list.html">Back</a>
