--- a/page_4.html
+++ b/page_4.html
@@ -29,11 +29,11 @@ a:active {
 
 <body style="background-color:#FFFFFF">
 <div style="max-width:500px">
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Leaders/maxine_oak_1.jpg" style="max-width:100%" /></a>
+<img src="./Links/Leaders/maxine_oak_1.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Leaders/maxine_oak_2.jpg" style="max-width:100%" /></a>
+<img src="./Links/Leaders/maxine_oak_2.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Leaders/maxine_oak_3.jpg" style="max-width:100%" /></a>
+<img src="./Links/Leaders/maxine_oak_3.jpg" style="max-width:100%" /></a>
 <br>
 <img src="/Users/mattmiller/Documents/Test_Site/Links/Leaders/maxine_oak_4.png" style="max-width:100%" /></a>
 <br>
