--- a/welcome.html
+++ b/welcome.html
@@ -37,6 +37,6 @@ img {
 
 </head>
 <body>
-<a href="/Users/mattmiller/Documents/Test_Site/index.html"><p style="text-align:center">Proceed to Oakley Digital Asset Library</p></a>
+<a href="./index.html"><p style="text-align:center">Proceed to Oakley Digital Asset Library</p></a>
 </body>
 </html>
