--- a/welcome.html
+++ b/welcome.html
@@ -4,7 +4,7 @@
     <title>Welcome</title>
 
 <!-- (A) LOAD CSS & JS -->
-    <link rel="stylesheet" href="/Users/mattmiller/Documents/Test_Site/collapse-list-html/collapse-list.css">
+    <link rel="stylesheet" href="./collapse-list.css">
     <script src="collapse-list.js"></script>
 
 <style>
