--- a/page_5.html
+++ b/page_5.html
@@ -31,15 +31,15 @@ a:active {
 <div style="max-width:500px">
 <img src="" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/icons/icons_oak_1.png" style="max-width:100%" /></a>
+<img src="./Links/icons/icons_oak_1.png" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/icons/icons_oak_2.jpg" style="max-width:100%" /></a>
+<img src="./Links/icons/icons_oak_2.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/icons/icons_oak_3.png" style="max-width:100%" /></a>
+<img src="./Links/icons/icons_oak_3.png" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/icons/icons_oak_4.png" style="max-width:100%" /></a>
+<img src="./Links/icons/icons_oak_4.png" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/icons/icons_oak_5.png" style="max-width:100%" /></a>
+<img src="./Links/icons/icons_oak_5.png" style="max-width:100%" /></a>
 <br>
 <img src="/Users/mattmiller/Documents/Test_Site/Links/icons/icons_oak_6.png" style="max-width:100%" /></a>
 <br>
