--- a/page_5.html
+++ b/page_5.html
@@ -41,13 +41,13 @@ a:active {
 <br>
 <img src="./Links/icons/icons_oak_5.png" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/icons/icons_oak_6.png" style="max-width:100%" /></a>
+<img src="./Links/icons/icons_oak_6.png" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/icons/icons_oak_7.png" style="max-width:100%" /></a>
+<img src="./Links/icons/icons_oak_7.png" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/icons/icons_oak_8.png" style="max-width:100%" /></a>
+<img src="./Links/icons/icons_oak_8.png" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/icons/icons_oak_9.png" style="max-width:100%" /></a>
+<img src="./Links/icons/icons_oak_9.png" style="max-width:100%" /></a>
 <br>
 <img src="/Users/mattmiller/Documents/Test_Site/Links/icons/icons_oak_10.jpg" style="max-width:100%" /></a>
 <br>
