--- a/page_5.html
+++ b/page_5.html
@@ -49,13 +49,13 @@ a:active {
 <br>
 <img src="./Links/icons/icons_oak_9.png" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/icons/icons_oak_10.jpg" style="max-width:100%" /></a>
+<img src="./Links/icons/icons_oak_10.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/icons/icons_oak_11.jpg" style="max-width:100%" /></a>
+<img src="./Links/icons/icons_oak_11.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/icons/icons_oak_12.jpg" style="max-width:100%" /></a>
+<img src="./Links/icons/icons_oak_12.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/icons/icons_oak_13.png" style="max-width:100%" /></a>
+<img src="./Links/icons/icons_oak_13.png" style="max-width:100%" /></a>
 <br>
 <img src="/Users/mattmiller/Documents/Test_Site/Links/icons/icons_oak_14.png" style="max-width:100%" /></a>
 <br>
