--- a/page_5.html
+++ b/page_5.html
@@ -57,12 +57,12 @@ a:active {
 <br>
 <img src="./Links/icons/icons_oak_13.png" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/icons/icons_oak_14.png" style="max-width:100%" /></a>
+<img src="./Links/icons/icons_oak_14.png" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/icons/icons_oak_15.jpg" style="max-width:100%" /></a>
+<img src="./Links/icons/icons_oak_15.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/icons/icons_oak_16.jpg" style="max-width:100%" /></a>
+<img src="./Links/icons/icons_oak_16.jpg" style="max-width:100%" /></a>
 <br>
 <p style = "font-family:courier,serif;font-size:16px;font-style:regular;">
-<a href="/Users/mattmiller/Documents/Test_Site/collapse-list-html/collapse-list.html">Back</a>
+<a href="./collapse-list.html">Back</a>
 </p>
