--- a/page_5.html
+++ b/page_5.html
@@ -61,7 +61,7 @@ a:active {
 <br>
 <img src="./Links/icons/icons_oak_15.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/icons/icons_oak_16.jpg" style="max-width:100%" /></a>
+<img src="./Links/icons/icons_oak_16.jpg" style="max-width:100%" /></a>
 <br>
 <p style = "font-family:courier,serif;font-size:16px;font-style:regular;">
 <a href="./collapse-list.html">Back</a>
