--- a/page_6.html
+++ b/page_6.html
@@ -29,15 +29,15 @@ a:active {
 
 <body style="background-color:#FFFFFF">
 <div style="max-width:500px">
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Temples/temples_oak_1.jpg" style="max-width:100%" /></a>
+<img src="./Links/Temples/temples_oak_1.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Temples/temples_oak_2.jpg" style="max-width:100%" /></a>
+<img src="./Links/Temples/temples_oak_2.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Temples/temples_oak_19.png" style="max-width:100%" /></a>
+<img src="./Links/Temples/temples_oak_19.png" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Temples/temples_oak_4.png" style="max-width:100%" /></a>
+<img src="./Links/Temples/temples_oak_4.png" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Temples/temples_oak_5.jpg" style="max-width:100%" /></a>
+<img src="./Links/Temples/temples_oak_5.jpg" style="max-width:100%" /></a>
 <br>
 <img src="/Users/mattmiller/Documents/Test_Site/Links/Temples/temples_oak_6.png" style="max-width:100%" /></a>
 <br>
