--- a/page_6.html
+++ b/page_6.html
@@ -39,13 +39,13 @@ a:active {
 <br>
 <img src="./Links/Temples/temples_oak_5.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Temples/temples_oak_6.png" style="max-width:100%" /></a>
+<img src="./Links/Temples/temples_oak_6.png" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Temples/temples_oak_7.jpg" style="max-width:100%" /></a>
+<img src="./Links/Temples/temples_oak_7.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Temples/temples_oak_8.jpg" style="max-width:100%" /></a>
+<img src="./Links/Temples/temples_oak_8.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Temples/temples_oak_9.jpg" style="max-width:100%" /></a>
+<img src="./Links/Temples/temples_oak_9.jpg" style="max-width:100%" /></a>
 <br>
 <img src="/Users/mattmiller/Documents/Test_Site/Links/Temples/temploes_oak_10.jpg" style="max-width:100%" /></a>
 <br>
