--- a/page_6.html
+++ b/page_6.html
@@ -47,15 +47,15 @@ a:active {
 <br>
 <img src="./Links/Temples/temples_oak_9.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Temples/temploes_oak_10.jpg" style="max-width:100%" /></a>
+<img src="./Links/Temples/temploes_oak_10.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Temples/temples_oak_11.jpg" style="max-width:100%" /></a>
+<img src="./Links/Temples/temples_oak_11.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Temples/temploes_oak_12.jpg" style="max-width:100%" /></a>
+<img src="./Links/Temples/temploes_oak_12.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Temples/temploes_oak_13.jpg" style="max-width:100%" /></a>
+<img src="./Links/Temples/temploes_oak_13.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Temples/temploes_oak_14.jpg" style="max-width:100%" /></a>
+<img src="./Links/Temples/temploes_oak_14.jpg" style="max-width:100%" /></a>
 <br>
 <img src="/Users/mattmiller/Documents/Test_Site/Links/Temples/temploes_oak_15.jpg" style="max-width:100%" /></a>
 <br>
