--- a/page_6.html
+++ b/page_6.html
@@ -57,13 +57,13 @@ a:active {
 <br>
 <img src="./Links/Temples/temploes_oak_14.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Temples/temploes_oak_15.jpg" style="max-width:100%" /></a>
+<img src="./Links/Temples/temploes_oak_15.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Temples/temploes_oak_16.jpg" style="max-width:100%" /></a>
+<img src="./Links/Temples/temploes_oak_16.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Temples/temples_oak_17.jpg" style="max-width:100%" /></a>
+<img src="./Links/Temples/temples_oak_17.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Temples/temples_oak_18.jpg" style="max-width:100%" /></a>
+<img src="./Temples/temples_oak_18.jpg" style="max-width:100%" /></a>
 <br>
 <img src="/Users/mattmiller/Documents/Test_Site/Links/Temples/temples_oak_20.jpg" style="max-width:100%" /></a>
 <br>
