--- a/page_6.html
+++ b/page_6.html
@@ -65,8 +65,8 @@ a:active {
 <br>
 <img src="./Temples/temples_oak_18.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Temples/temples_oak_20.jpg" style="max-width:100%" /></a>
+<img src="./Links/Temples/temples_oak_20.jpg" style="max-width:100%" /></a>
 <br>
 <p style = "font-family:courier,serif;font-size:16px;font-style:regular;">
-<a href="/Users/mattmiller/Documents/Test_Site/collapse-list-html/collapse-list.html">Back</a>
+<a href="./collapse-list.html">Back</a>
 </p>
