--- a/page_7.html
+++ b/page_7.html
@@ -29,15 +29,15 @@ a:active {
 
 <body style="background-color:#FFFFFF">
 <div style="max-width:500px">
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Rituals/rituals_oak_1.jpg" style="max-width:100%" /></a>
+<img src="./Links/Rituals/rituals_oak_1.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Rituals/rituals_oak_2.jpg" style="max-width:100%" /></a>
+<img src="./Links/Rituals/rituals_oak_2.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Rituals/rituals_oak_3.jpg" style="max-width:100%" /></a>
+<img src="./Links/Rituals/rituals_oak_3.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Rituals/rituals_oak_4.jpg" style="max-width:100%" /></a>
+<img src="./Links/Rituals/rituals_oak_4.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Rituals/rituals_oak_5.jpg" style="max-width:100%" /></a>
+<img src="./Links/Rituals/rituals_oak_5.jpg" style="max-width:100%" /></a>
 <br>
 <img src="/Users/mattmiller/Documents/Test_Site/Links/Rituals/rituals_oak_6.jpg" style="max-width:100%" /></a>
 <br>
