--- a/page_7.html
+++ b/page_7.html
@@ -39,15 +39,15 @@ a:active {
 <br>
 <img src="./Links/Rituals/rituals_oak_5.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Rituals/rituals_oak_6.jpg" style="max-width:100%" /></a>
+<img src="./Links/Rituals/rituals_oak_6.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Rituals/rituals_oak_7.jpg" style="max-width:100%" /></a>
+<img src="./Links/Rituals/rituals_oak_7.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Rituals/rituals_oak_8.jpg" style="max-width:100%" /></a>
+<img src="./Links/Rituals/rituals_oak_8.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Rituals/rituals_oak_9.jpg" style="max-width:100%" /></a>
+<img src="./Links/Rituals/rituals_oak_9.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Rituals/rituals_oak_10.jpg" style="max-width:100%" /></a>
+<img src="./Links/Rituals/rituals_oak_10.jpg" style="max-width:100%" /></a>
 <br>
 <img src="/Users/mattmiller/Documents/Test_Site/Links/Rituals/rituals_oak_11.jpg" style="max-width:100%" /></a>
 <br>
