--- a/page_7.html
+++ b/page_7.html
@@ -49,15 +49,15 @@ a:active {
 <br>
 <img src="./Links/Rituals/rituals_oak_10.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Rituals/rituals_oak_11.jpg" style="max-width:100%" /></a>
+<img src="./Links/Rituals/rituals_oak_11.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Rituals/rituals_oak_12.jpg" style="max-width:100%" /></a>
+<img src="./Links/Rituals/rituals_oak_12.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Rituals/rituals_oak_13.jpg" style="max-width:100%" /></a>
+<img src="./Links/Rituals/rituals_oak_13.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Rituals/rituals_oak_14.jpg" style="max-width:100%" /></a>
+<img src="./Links/Rituals/rituals_oak_14.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Rituals/rituals_oak_15.jpg" style="max-width:100%" /></a>
+<img src="./Links/Rituals/rituals_oak_15.jpg" style="max-width:100%" /></a>
 <br>
 <img src="/Users/mattmiller/Documents/Test_Site/Links/Rituals/rituals_oak_16.jpg" style="max-width:100%" /></a>
 <br>
