--- a/page_7.html
+++ b/page_7.html
@@ -59,17 +59,17 @@ a:active {
 <br>
 <img src="./Links/Rituals/rituals_oak_15.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Rituals/rituals_oak_16.jpg" style="max-width:100%" /></a>
+<img src="./Links/Rituals/rituals_oak_16.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Rituals/rituals_oak_17.jpg" style="max-width:100%" /></a>
+<img src="./Links/Rituals/rituals_oak_17.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Rituals/rituals_oak_18.jpg" style="max-width:100%" /></a>
+<img src="./Links/Rituals/rituals_oak_18.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Rituals/rituals_oak_19.jpg" style="max-width:100%" /></a>
+<img src="./Links/Rituals/rituals_oak_19.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Rituals/rituals_oak_20.jpg" style="max-width:100%" /></a>
+<img src="./Links/Rituals/rituals_oak_20.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Rituals/rituals_oak_21.jpg" style="max-width:100%" /></a>
+<img src="./Links/Rituals/rituals_oak_21.jpg" style="max-width:100%" /></a>
 <br>
 <img src="/Users/mattmiller/Documents/Test_Site/Links/Rituals/rituals_oak_22.jpg" style="max-width:100%" /></a>
 <br>
