--- a/page_7.html
+++ b/page_7.html
@@ -71,15 +71,15 @@ a:active {
 <br>
 <img src="./Links/Rituals/rituals_oak_21.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Rituals/rituals_oak_22.jpg" style="max-width:100%" /></a>
+<img src="./Links/Rituals/rituals_oak_22.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Rituals/rituals_oak_23.jpg" style="max-width:100%" /></a>
+<img src="./Links/Rituals/rituals_oak_23.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Rituals/rituals_oak_24.jpg" style="max-width:100%" /></a>
+<img src="./Links/Rituals/rituals_oak_24.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Rituals/rituals_oak_25.jpg" style="max-width:100%" /></a>
+<img src="./Links/Rituals/rituals_oak_25.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Rituals/rituals_oak_26.jpg" style="max-width:100%" /></a>
+<img src="./Links/Rituals/rituals_oak_26.jpg" style="max-width:100%" /></a>
 <br>
 <img src="/Users/mattmiller/Documents/Test_Site/Links/Rituals/rituals_oak_27.jpg" style="max-width:100%" /></a>
 <br>
