--- a/page_7.html
+++ b/page_7.html
@@ -81,15 +81,15 @@ a:active {
 <br>
 <img src="./Links/Rituals/rituals_oak_26.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Rituals/rituals_oak_27.jpg" style="max-width:100%" /></a>
+<img src="./Links/Rituals/rituals_oak_27.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Rituals/rituals_oak_28.jpg" style="max-width:100%" /></a>
+<img src="./Links/Rituals/rituals_oak_28.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Rituals/rituals_oak_29.jpg" style="max-width:100%" /></a>
+<img src="./Links/Rituals/rituals_oak_29.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Rituals/rituals_oak_30.jpg" style="max-width:100%" /></a>
+<img src="./Links/Rituals/rituals_oak_30.jpg" style="max-width:100%" /></a>
 <br>
-<img src=/Users/mattmiller/Documents/Test_Site/Links/Rituals/rituals_oak_31.jpg" style="max-width:100%" /></a>
+<img src=./Links/Rituals/rituals_oak_31.jpg" style="max-width:100%" /></a>
 <br>
 <img src="/Users/mattmiller/Documents/Test_Site/Links/Rituals/rituals_oak_32.png" style="max-width:100%" /></a>
 <br>
