--- a/page_7.html
+++ b/page_7.html
@@ -91,16 +91,16 @@ a:active {
 <br>
 <img src=./Links/Rituals/rituals_oak_31.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Rituals/rituals_oak_32.png" style="max-width:100%" /></a>
+<img src="./Links/Rituals/rituals_oak_32.png" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Rituals/rituals_oak_33.png" style="max-width:100%" /></a>
+<img src="./Links/Rituals/rituals_oak_33.png" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Rituals/rituals_oak_34.png" style="max-width:100%" /></a>
+<img src="./Links/Rituals/rituals_oak_34.png" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Rituals/rituals_oak_35.jpg" style="max-width:100%" /></a>
+<img src="./Links/Rituals/rituals_oak_35.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Rituals/rituals_36.jpg" style="max-width:100%" /></a>
+<img src="./Links/Rituals/rituals_36.jpg" style="max-width:100%" /></a>
 <br>
 <p style = "font-family:courier,serif;font-size:16px;font-style:regular;">
-<a href="/Users/mattmiller/Documents/Test_Site/collapse-list-html/collapse-list.html">Back</a>
+<a href="./collapse-list.html">Back</a>
 </p>
