--- a/page_8.html
+++ b/page_8.html
@@ -29,18 +29,17 @@ a:active {
 
 <body style="background-color:#FFFFFF">
 <div style="max-width:500px" />
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Lexicon/lexicon_oak_25.png" style="max-width:100%" /></a>
+<img src="./Links/Lexicon/lexicon_oak_25.png" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Lexicon/lexicon_oak_1.png" style="max-width:100%" /></a>
+<img src="./Links/Lexicon/lexicon_oak_1.png" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Lexicon/lexicon_oak_2.jpg" style="max-width:100%" /></a>
+<img src="./Links/Lexicon/lexicon_oak_2.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Lexicon/lexicon_oak_30.jpg" style="max-width:100%" /></a>
+<img src="./Links/Lexicon/lexicon_oak_30.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Lexicon/lexicon_oak_3.jpg" style="max-width:100%" /></a>
+<img src="./Links/Lexicon/lexicon_oak_3.jpg" style="max-width:100%" /></a>
 <br>
-<br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Lexicon/lexicon_oak_4.jpg" style="max-width:100%" /></a>
+<img src="./Links/Lexicon/lexicon_oak_4.jpg" style="max-width:100%" /></a>
 <br>
 <br>
 <img src="/Users/mattmiller/Documents/Test_Site/Links/Lexicon/lexicon_oak_5.jpg" style="max-width:100%" /></a>
