--- a/page_8.html
+++ b/page_8.html
@@ -42,16 +42,16 @@ a:active {
 <img src="./Links/Lexicon/lexicon_oak_4.jpg" style="max-width:100%" /></a>
 <br>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Lexicon/lexicon_oak_5.jpg" style="max-width:100%" /></a>
+<img src="./Links/Lexicon/lexicon_oak_5.jpg" style="max-width:100%" /></a>
 <br>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Lexicon/lexicon_oak_6.jpg" style="max-width:100%" /></a>
+<img src="./Links/Lexicon/lexicon_oak_6.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Lexicon/lexicon_oak_7.jpg" style="max-width:100%" /></a>
+<img src="./Links/Lexicon/lexicon_oak_7.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Lexicon/lexicon_oak_8.jpg" style="max-width:100%" /></a>
+<img src="./Links/Lexicon/lexicon_oak_8.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Lexicon/lexicon_oak_9.jpg" style="max-width:100%" /></a>
+<img src="./Links/Lexicon/lexicon_oak_9.jpg" style="max-width:100%" /></a>
 <br>
 <img src="/Users/mattmiller/Documents/Test_Site/Links/Lexicon/lexicon_oak_10.jpg" style="max-width:100%" /></a>
 <br>
