--- a/page_8.html
+++ b/page_8.html
@@ -51,13 +51,13 @@ a:active {
 <br>
 <img src="./Links/Lexicon/lexicon_oak_8.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Lexicon/lexicon_oak_9.jpg" style="max-width:100%" /></a>
+<img src="./Links/Lexicon/lexicon_oak_9.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Lexicon/lexicon_oak_10.jpg" style="max-width:100%" /></a>
+<img src="./Links/Lexicon/lexicon_oak_10.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Lexicon/lexicon_oak_31.jpg" style="max-width:100%" /></a>
+<img src="./Links/Lexicon/lexicon_oak_31.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Lexicon/lexicon_oak_32.jpg" style="max-width:100%" /></a>
+<img src="./Links/Lexicon/lexicon_oak_32.jpg" style="max-width:100%" /></a>
 <br>
 <img src="/Users/mattmiller/Documents/Test_Site/Links/Lexicon/lexicon_oak_11.jpg" style="max-width:100%" /></a>
 <br>
