--- a/page_8.html
+++ b/page_8.html
@@ -58,13 +58,13 @@ a:active {
 <br>
 <img src="./Links/Lexicon/lexicon_oak_32.jpg" style="max-width:100%" /></a>
 <br>
-<img src="Users/mattmiller/Documents/Test_Site/Links/Lexicon/lexicon_oak_11.jpg" style="max-width:100%" /></a>
+<img src="./Links/Lexicon/lexicon_oak_11.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Lexicon/lexicon_oak_12.jpg" style="max-width:100%" /></a>
+<img src="./Links/Lexicon/lexicon_oak_12.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Lexicon/lexicon_oak_13.jpg" style="max-width:100%" /></a>
+<img src="./Links/Lexicon/lexicon_oak_13.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Lexicon/lexicon_oak_14.jpg" style="max-width:100%" /></a>
+<img src="./Links/Lexicon/lexicon_oak_14.jpg" style="max-width:100%" /></a>
 <br>
 <img src="/Users/mattmiller/Documents/Test_Site/Links/Lexicon/lexicon_oak_20.png" style="max-width:100%" /></a>
 <br>
