--- a/page_8.html
+++ b/page_8.html
@@ -66,11 +66,11 @@ a:active {
 <br>
 <img src="./Links/Lexicon/lexicon_oak_14.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Lexicon/lexicon_oak_20.png" style="max-width:100%" /></a>
+<img src="./Links/Lexicon/lexicon_oak_20.png" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Lexicon/lexicon_oak_21.png" style="max-width:100%" /></a>
+<img src="./Links/Lexicon/lexicon_oak_21.png" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Lexicon/lexicon_oak_22.png" style="max-width:100%" /></a>
+<img src="./Links/Lexicon/lexicon_oak_22.png" style="max-width:100%" /></a>
 <br>
 <img src="/Users/mattmiller/Documents/Test_Site/Links/Lexicon/lexicon_oak_23.png" style="max-width:100%" /></a>
 <br>
