--- a/page_8.html
+++ b/page_8.html
@@ -72,15 +72,15 @@ a:active {
 <br>
 <img src="./Links/Lexicon/lexicon_oak_22.png" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Lexicon/lexicon_oak_23.png" style="max-width:100%" /></a>
+<img src="./Links/Lexicon/lexicon_oak_23.png" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Lexicon/lexicon_oak_24.png" style="max-width:100%" /></a>
+<img src="./Links/Lexicon/lexicon_oak_24.png" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Lexicon/lexicon_oak_26.jpg" style="max-width:100%" /></a>
+<img src="./Links/Lexicon/lexicon_oak_26.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Lexicon/lexicon_oak_27.jpeg" style="max-width:100%" /></a>
+<img src="./Links/Lexicon/lexicon_oak_27.jpeg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Lexicon/lexicon_oak_28.JPG" style="max-width:100%" /></a>
+<img src="./Links/Lexicon/lexicon_oak_28.JPG" style="max-width:100%" /></a>
 <br>
 <img src="/Users/mattmiller/Documents/Test_Site/Links/Lexicon/lexicon_oak_29.jpeg" style="max-width:100%" /></a>
 <br>
