--- a/page_8.html
+++ b/page_8.html
@@ -82,8 +82,8 @@ a:active {
 <br>
 <img src="./Links/Lexicon/lexicon_oak_28.JPG" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/Lexicon/lexicon_oak_29.jpeg" style="max-width:100%" /></a>
+<img src="./Links/Lexicon/lexicon_oak_29.jpeg" style="max-width:100%" /></a>
 <br>
 <p style = "font-family:courier,serif;font-size:16px;font-style:regular;">
-<a href="/Users/mattmiller/Documents/Test_Site/collapse-list-html/collapse-list.html">Back</a>
+<a href="./collapse-list.html">Back</a>
 </p>
