--- a/page_9.html
+++ b/page_9.html
@@ -29,10 +29,10 @@ a:active {
 
 <body style="background-color:#FFFFFF">
 <div style="max-width:500px" />
-<img src="/Users/mattmiller/Documents/Test_Site/Links/non_believers/non_believers_1.png" style="max-width:100%" /></a>
+<img src="./Links/non_believers/non_believers_1.png" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/non_believers/non_believers_2.jpg" style="max-width:100%" /></a>
+<img src="./Links/non_believers/non_believers_2.jpg" style="max-width:100%" /></a>
 <br>
 <p style = "font-family:courier,serif;font-size:16px;font-style:regular;">
-<a href="/Users/mattmiller/Documents/Test_Site/collapse-list-html/collapse-list.html">Back</a>
+<a href="./collapse-list.html">Back</a>
 </p>
