--- a/page_10.html
+++ b/page_10.html
@@ -29,12 +29,12 @@ a:active {
 
 <body style="background-color:#FFFFFF">
 <div style="max-width:500px" />
-<img src="/Users/mattmiller/Documents/Test_Site/Links/the_road_ahead/theroadahead_1.jpg" style="max-width:100%" /></a>
+<img src="./Links/the_road_ahead/theroadahead_1.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/the_road_ahead/theroadahead_2.jpg" style="max-width:100%" /></a>
+<img src="./Links/the_road_ahead/theroadahead_2.jpg" style="max-width:100%" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Links/the_road_ahead/theroadonahead_3.jpg" style="max-width:100%" /></a>
+<img src="./Links/the_road_ahead/theroadonahead_3.jpg" style="max-width:100%" /></a>
 <br>
 <p style = "font-family:courier,serif;font-size:16px;font-style:regular;">
-<a href="/Users/mattmiller/Documents/Test_Site/collapse-list-html/collapse-list.html">Back</a>
+<a href="./collapse-list.html">Back</a>
 </p>
