--- a/page_14.html
+++ b/page_14.html
@@ -30,17 +30,17 @@ a:active {
 <body style="background-color:#FFFFFF">
 <div style="max-width:500px">
 <p style = "font-family:courier,serif;font-size:16px;font-style:regular;">
-<img src="/Users/mattmiller/Documents/Test_Site/Appendix_Links/Technology/technology_appendix_15.jpg" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Technology/technology_appendix_15.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Appendix_Links/Technology/technology_appendix_5.jpg" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Technology/technology_appendix_5.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Appendix_Links/Technology/technology_appendix_11.png" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Technology/technology_appendix_11.png" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Appendix_Links/Technology/technology_appendix_4.jpg" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Technology/technology_appendix_4.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Appendix_Links/Technology/technology_appendix_9.png" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Technology/technology_appendix_9.png" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Appendix_Links/Technology/technology_appendix_6.png" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Technology/technology_appendix_6.png" style="max-width:100%;" /></a>
 <br>
 <img src="/Users/mattmiller/Documents/Test_Site/Appendix_Links/Technology/technology_appendix_8.png" style="max-width:100%;" /></a>
 <br>
