--- a/page_14.html
+++ b/page_14.html
@@ -42,15 +42,15 @@ a:active {
 <br>
 <img src="./Appendix_Links/Technology/technology_appendix_6.png" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Appendix_Links/Technology/technology_appendix_8.png" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Technology/technology_appendix_8.png" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Appendix_Links/Technology/technology_appendix_13.jpg" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Technology/technology_appendix_13.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Appendix_Links/Technology/technology_appendix_1.jpg" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Technology/technology_appendix_1.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Appendix_Links/Technology/technology_appendix_10.png" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Technology/technology_appendix_10.png" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Appendix_Links/Technology/technology_appendix_12.jpg" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Technology/technology_appendix_12.jpg" style="max-width:100%;" /></a>
 <br>
 <img src="/Users/mattmiller/Documents/Test_Site/Appendix_Links/Technology/technology_appendix_3.jpg" style="max-width:100%;" /></a>
 <br>
