--- a/page_14.html
+++ b/page_14.html
@@ -52,11 +52,11 @@ a:active {
 <br>
 <img src="./Appendix_Links/Technology/technology_appendix_12.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Appendix_Links/Technology/technology_appendix_3.jpg" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Technology/technology_appendix_3.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Appendix_Links/Technology/technology_appendix_14.jpg" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Technology/technology_appendix_14.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Appendix_Links/Technology/technology_appendix_7.png" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Technology/technology_appendix_7.png" style="max-width:100%;" /></a>
 <br>
-<a href="/Users/mattmiller/Documents/Test_Site/collapse-list-html/collapse-list.html">Back</a>
+<a href="./collapse-list.html">Back</a>
 </p>
