--- a/page_15.html
+++ b/page_15.html
@@ -48,11 +48,11 @@ a:active {
 <br>
 <img src="./Appendix_Links/the_bunker/the_bunker_appendix_12.png" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Appendix_Links/the_bunker/the_bunker_appendix_13.jpg" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/the_bunker/the_bunker_appendix_13.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Appendix_Links/the_bunker/the_bunker_appendix_5.jpg" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/the_bunker/the_bunker_appendix_5.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Appendix_Links/the_bunker/the_bunker_appendix_3.jpg" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/the_bunker/the_bunker_appendix_3.jpg" style="max-width:100%;" /></a>
 <br>
-<a href="/Users/mattmiller/Documents/Test_Site/collapse-list-html/collapse-list.html">Back</a>
+<a href="./collapse-list.html">Back</a>
 </p>
